<resources>
    <string name="app_name">Birthday Notifier</string>
    <string name="test_app">Check birthdays</string>
    <string name="open_json">Change birthdays</string>
    <string name="settings">Settings</string>
    <string name="set_time">Set notification time</string>
    <string name="logout">Logout</string>
    <string name="add_birthday">Add Birthday</string>
    <string name="birthday_list_title">Birthdays</string>
    <string name="login">Login</string>
    <string name="linkedin">Mi LinkedIn</string>
    <string name="buy_me_coffee">Buy me a coffee</string>
    <string name="repo">Este repositorio</string>
    <string name="language">Language</string>
    <string name="default_web_client_id">793109226456-n35uqu21dd5s3i3ggn57807tvlkrgio9.apps.googleusercontent.com</string>
</resources>