<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="?attr/colorPrimary"
        android:title="@string/settings"
        app:titleTextColor="@color/md_theme_light_onBackground" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSetTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/set_time"
        style="?attr/materialButtonStyle"
        android:backgroundTint="@color/md_theme_light_primary"
        android:textColor="@color/md_theme_light_onPrimary"
        android:layout_marginTop="24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        style="?attr/materialButtonStyle"
        android:backgroundTint="@color/md_theme_light_primary"
        android:textColor="@color/md_theme_light_onPrimary"
        android:layout_marginTop="16dp" />

</LinearLayout>
